codex-rs/tui/src/snapshots/codex_tui__daemon_recovery__tests__non_restartable_daemon_recovery_menu.snap
---
source: tui/src/daemon_recovery_tests.rs
expression: text
---

  Cannot use the background server
  code-mode host fallback policy requires embedded mode


  1. Run without daemon this time
     Restart with these settings (disabled)  Restart cannot resolve this compatibility
                                             check.
› 2. Cancel
